Fix scrim sizing hack
I was trying to get the scrim to cover the whole screen here, but
really I should have just removed the margin on the body. Now at
least on non-macOS systems, making the scrim visible should no
longer pop scrollbars in both dimensions.

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ body {
   background-color: var(--background-color, black);
   color: var(--text-color, white);
   display: grid;
+  margin: 0;
   gap: 3rem;
   /* grid-template-columns: 1fr 2fr; */
   grid-template-rows: 50px 1fr;
@@ -198,10 +199,8 @@ textarea {
 #full-screen-scrim {
   position: absolute;
   background-color: #6200ff20;
-  width: 105%;
-  height: 105%;
-  top: -8px;
-  left: -8px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
